--- a/config.yaml
+++ b/config.yaml
@@ -60,6 +60,7 @@ contact: 'team@carpentries.org'
 # Order of episodes in your lesson
 episodes: 
 - introduction.Rmd
+- part2.Rmd
 
 # Information for Learners
 learners: 
